basic lute link + runtime load

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,7 @@ luajit52 = ["luajit", "ffi/luajit52"]
 luau = ["ffi/luau"]
 luau-jit = ["luau", "ffi/luau-codegen"]
 luau-vector4 = ["luau", "ffi/luau-vector4"]
+luau-lute = ["luau", "ffi/luau-lute"]
 vendored = ["ffi/vendored"]
 module = ["dep:mlua_derive", "ffi/module"]
 async = ["dep:futures-util"]
