--- a/mlua-sys/Cargo.toml
+++ b/mlua-sys/Cargo.toml
@@ -29,6 +29,7 @@ luajit52 = ["luajit"]
 luau = ["luau0-src"]
 luau-codegen = ["luau"]
 luau-vector4 = ["luau"]
+luau-lute = ["lute-src-rs"]
 vendored = ["lua-src", "luajit-src"]
 module = []
 
@@ -41,6 +42,7 @@ pkg-config = "0.3.17"
 lua-src = { version = ">= 547.1.0, < 547.2.0", optional = true }
 luajit-src = { version = ">= 210.6.0, < 210.7.0", optional = true }
 luau0-src = { version = "0.14.2", optional = true }
+lute-src-rs = { git = "https://github.com/mlua-lute-integration/lute-src-rs", optional = true }
 
 [lints.rust]
 unexpected_cfgs = { level = "allow", check-cfg = ['cfg(raw_dylib)'] }
